[gd_scene load_steps=12 format=3 uid="uid://cf0aoqglnja4x"]

[ext_resource type="Script" uid="uid://bvot0oocyfuum" path="res://Defense/arrowTower/arrowTower.gd" id="1_vif1f"]
[ext_resource type="Texture2D" uid="uid://bkesaot31q6gx" path="res://Assets/Sprites/Towers/arrowTower.png" id="2_7igdg"]
[ext_resource type="PackedScene" uid="uid://dr06cg5ebukx1" path="res://Defense/arrowTower/archers.tscn" id="3_7igdg"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3d3qn"]
size = Vector2(64, 80)

[sub_resource type="CircleShape2D" id="CircleShape2D_xv24t"]
radius = 128.0

[sub_resource type="AtlasTexture" id="AtlasTexture_37fuo"]
atlas = ExtResource("2_7igdg")
region = Rect2(0, 0, 70, 130)

[sub_resource type="AtlasTexture" id="AtlasTexture_s7b4g"]
atlas = ExtResource("2_7igdg")
region = Rect2(70, 0, 70, 130)

[sub_resource type="AtlasTexture" id="AtlasTexture_a226v"]
atlas = ExtResource("2_7igdg")
region = Rect2(140, 0, 70, 130)

[sub_resource type="AtlasTexture" id="AtlasTexture_wasno"]
atlas = ExtResource("2_7igdg")
region = Rect2(210, 0, 70, 130)

[sub_resource type="SpriteFrames" id="SpriteFrames_jog3n"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_37fuo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s7b4g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a226v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wasno")
}],
"loop": true,
"name": &"arrowTower",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7igdg"]
bg_color = Color(0.7019608, 0.6, 0.6, 1)
corner_radius_top_left = 450
corner_radius_top_right = 450
corner_radius_bottom_right = 450
corner_radius_bottom_left = 450

[node name="ArrowTower" type="Node2D"]
script = ExtResource("1_vif1f")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -8)
shape = SubResource("RectangleShape2D_3d3qn")

[node name="AreaAim" type="Marker2D" parent="."]

[node name="TowerArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="TowerArea"]
shape = SubResource("CircleShape2D_xv24t")

[node name="ArrowTowerSprite" type="AnimatedSprite2D" parent="."]
position = Vector2(3.0517578e-05, -15.999999)
scale = Vector2(1.4142857, 1.1153846)
sprite_frames = SubResource("SpriteFrames_jog3n")
animation = &"arrowTower"
frame_progress = 0.46609095

[node name="ArrowsContainer" type="Node" parent="."]

[node name="Archers" parent="." instance=ExtResource("3_7igdg")]
position = Vector2(0, 16)

[node name="RangeShooting" type="Panel" parent="."]
modulate = Color(0.6, 1, 1, 0.3137255)
offset_left = -128.0
offset_top = -128.0
offset_right = 128.0
offset_bottom = 128.0
theme_override_styles/panel = SubResource("StyleBoxFlat_7igdg")
metadata/_edit_use_anchors_ = true

[connection signal="body_entered" from="TowerArea" to="." method="_on_tower_area_body_entered"]
[connection signal="body_exited" from="TowerArea" to="." method="_on_tower_area_body_exited"]
